# geoshader

./: .gitignore  CONSOLIDATION_README.md  GDELT_FILTERING_IMPROVEMENTS.md  Geopolitical_Defense_Equity_Roadmap.docx  Geopolitical_Defense_Equity_Roadmap_2-3Week.docx  README.md  SHAP  consolidate_data.py  main.py  pyproject.toml  requirements.txt  utils.py
config/: config.yaml  secrets.yaml.example
data/: compute_logreturns.py  fetch_gdelt.py  fetch_macro.py  fetch_prices.py  fetches.py
data/gdelt additions/: AKAMAI_403_FIX.md  FIX_SUMMARY.md  SIPRI_FIX_SUMMARY.md  fetch_dsca.py  fetch_sipri.py  run_all.py  update_dsca.py  update_sipri.py  utils.py
notebooks/: lin_model.rmd
